force-app/main/default/objects/ccrz__E_Attribute__c/ccrz__E_Attribute__c.object-meta.xml
<CustomObject>
    <description>Used by B2B Commerce to model Atribute Groups and Attribute Values</description>
    <label>CC Attribute</label>
    <nameField>
        <label>CC Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>