force-app/main/default/objects/ccrz__E_Attribute__c/fields/ccrz__AttributeID__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AttributeID__c</fullName>
    <description>Identifier for this Attribute</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier of this CC Attribute object used as a key in the JSON pricing object and as a reference internally by B2B Commerce</inlineHelpText>
    <label>Attribute ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>