force-app/main/default/objects/ccrz__E_Attribute__c/fields/ccrz__EffectiveEnd__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveEnd__c</fullName>
    <description>End Date for the availability period of this Attribute</description>
    <label>Effective End</label>
    <type>DateTime</type>
</CustomField>