force-app/main/default/objects/ccrz__E_Attribute__c/fields/ccrz__EffectiveStart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveStart__c</fullName>
    <description>Start Date for when this attribute should become available</description>
    <label>Effective Start</label>
    <type>DateTime</type>
</CustomField>