force-app/main/default/objects/ccrz__E_Attribute__c/fields/ccrz__ParentAttribute__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship that links a Value to the related attribute group</description>
    <inlineHelpText>Relationship that links a specific CC Attribute to the related CC Attribute parent object</inlineHelpText>
    <label>Parent Attribute</label>
    <referenceTo>ccrz__E_Attribute__c</referenceTo>
    <relationshipLabel>Child Attributes</relationshipLabel>
    <relationshipName>ChildAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>