force-app/main/default/objects/ccrz__E_Attribute__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <description>Sequence Number for the Attribute</description>
    <inlineHelpText>Orders the display of CC Attribute options in the Storefront</inlineHelpText>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>