force-app/main/default/objects/ccrz__E_Attribute__c/fields/ccrz__SKUFragment__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SKUFragment__c</fullName>
    <description>String used to construct the SKU of a configured product. The format of the constructed SKU can be configured via config setting in the Admin Console.</description>
    <inlineHelpText>Optional text used to dynamically create an Item SKU when the CC Attribute is selected on the Storefront</inlineHelpText>
    <label>SKU Fragment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>